# TradeGame

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml  run.sh
data/: live.db.wal
src/tradegame/: __init__.py  config.py
src/tradegame/agents/: base.py  rule_based.py
src/tradegame/dashboard/: app.py
src/tradegame/data/: cache.py  crypto.py  source.py  stocks.py
src/tradegame/engine/: backtest.py  metrics.py  portfolio.py  walkforward.py
src/tradegame/features/: indicators.py
src/tradegame/live/: loop.py  runner.py  state.py
tests/: test_backtest.py  test_cache.py  test_indicators_no_lookahead.py  test_live_state.py  test_portfolio.py
